Reworking to a few functioning tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "wdsp"
+name = "wdsp-sys"
 version = "0.1.0"
 authors = ["Roger E Critchlow Jr <rec@elf.org>"]
 edition = "2018"
+links = "wdsp"
 
 [dependencies]
-bindgen = "0.51.1"
-
-[build-dependencies]
-bindgen = "0.51.1"
 
